--- a/amplify/backend/function/mainRouterFunction/src/package.json
+++ b/amplify/backend/function/mainRouterFunction/src/package.json
@@ -6,5 +6,10 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.932.0",
+    "@supabase/supabase-js": "^2.81.1",
+    "dotenv": "^17.2.3"
   }
 }
